# tidepool

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  PRE_PUBLISH_PLAN.md  PUBLISHING.md  README.md  flake.nix  h1-report.md.tmp  h3-report.md.tmp  h5-report.md.tmp
.claude/: settings.json
.exo/: .gitignore  config.toml
.github/: ci-build-extract.sh
.github/workflows/: ci.yml  release.yml
.tidepool/lib/: Library.hs  SelfTest.hs
codegen/: Cargo.toml
codegen/src/: datacon_env.rs  effect_machine.rs  heap_bridge.rs  lib.rs
codegen/src/emit/: case.rs  expr.rs  mod.rs
codegen/tests/: effect_machine.rs  emit_letrec_con.rs
core-bridge/src/: error.rs  impls.rs  traits.rs
core-effect/src/: dispatch.rs  machine.rs
core-eval/: Cargo.toml
core-eval/src/: env.rs  error.rs  eval.rs  heap.rs  lib.rs  pass.rs  value.rs
core-heap/src/: arena.rs
core-heap/src/gc/: compact.rs  mod.rs  trace.rs
core-optimize/src/: beta.rs  case_reduce.rs  dce.rs  inline.rs  occ.rs  partial.rs  pipeline.rs
core-optimize/tests/: proptest_correctness.rs
core-repr/src/: alpha.rs  datacon_table.rs  free_vars.rs  lib.rs  pretty.rs  subst.rs  types.rs
core-repr/src/serial/: mod.rs  read.rs  write.rs
core-testing/: Cargo.toml
core-testing/src/: lib.rs  oracle.rs
examples/guess/: Cargo.toml
examples/guess-interpreted/: Cargo.toml
examples/guess-interpreted/src/: main.rs
examples/guess/src/: main.rs
examples/mcp-server/: Cargo.toml
examples/mcp-server/src/: main.rs
examples/tide/: Cargo.toml
examples/tide/haskell/: Effects.hs  Eval.hs  Types.hs
examples/tide/src/: ast.rs  handlers.rs  lib.rs  main.rs  parser.rs  tide.pest
haskell/: tidepool-harness.cabal
haskell/app/: Main.hs
haskell/lib/Tidepool/: Aeson.hs  Prelude.hs  Table.hs  Text.hs
haskell/src/Tidepool/: CborEncode.hs  FatIface.hs  GhcPipeline.hs  Resolve.hs  Translate.hs
haskell/test/: Suite.hs  TextSuite.hs
haskell/test/Suite_cbor/: $s$wpow'.cbor  $smyfilter.cbor  $smyfoldr.cbor  $smymap.cbor  $smymap_1.cbor  $trModule_1.cbor  $trModule_2.cbor  $trModule_3.cbor  $trModule_4.cbor  $wack.cbor  $wfib.cbor  app_church_two.cbor  app_const.cbor  app_identity.cbor  app_nested_lam.cbor  app_thrice.cbor  app_twice.cbor  arith_double_mul.cbor  arith_mul_one.cbor  arith_mul_zero.cbor  arith_neg_result.cbor  case_bool_and.cbor  case_bool_or.cbor  case_just.cbor  case_left.cbor  case_right.cbor  case_triple.cbor  case_true.cbor  case_wildcard_pair.cbor  cmp_eq_false.cbor  cmp_eq_true.cbor  cmp_ge_eq.cbor  cmp_le_eq.cbor  cmp_lt_false.cbor  cmp_lt_true.cbor  con_false.cbor  con_just.cbor  con_left.cbor  con_nested_just.cbor  con_nested_just_1.cbor  (+47 more)
haskell/test/TextSuite_cbor/: meta.cbor  text_all.cbor  text_any.cbor  text_append.cbor  text_compare.cbor  text_concatMap.cbor  text_cons.cbor  text_drop.cbor  text_dropWhile.cbor  text_empty.cbor  text_filter.cbor  text_filter_isInfixOf.cbor  text_filter_isInfixOf_4.cbor  text_filter_isInfixOf_5.cbor  text_filter_isInfixOf_6.cbor  text_filter_isInfixOf_7.cbor  text_filter_isInfixOf_8.cbor  text_filter_isInfixOf_8_list.cbor  text_filter_isInfixOf_small.cbor  text_filter_length.cbor  text_filter_lines.cbor  text_filter_list_isInfixOf.cbor  text_filter_simple_8.cbor  text_find.cbor  text_foldl.cbor  text_foldr.cbor  text_head.cbor  text_intercalate.cbor  text_isInfixOf.cbor  text_isInfixOf_4char.cbor  text_isInfixOf_4char_long.cbor  text_isInfixOf_5char.cbor  (+43 more)
plans/: README.md  polyfill-layer.md  scoped-env.md  tail-ctx.md
tidepool/: Cargo.toml
tidepool-bridge/: Cargo.toml
tidepool-bridge-derive/: Cargo.toml
tidepool-bridge-derive/src/: codegen.rs  lib.rs  parse.rs
tidepool-bridge-derive/tests/: derive_tests.rs
tidepool-bridge/src/: error.rs  impls.rs  json.rs  lib.rs
tidepool-bridge/tests/: roundtrip.rs
tidepool-codegen/: Cargo.toml
tidepool-codegen/src/: alloc.rs  datacon_env.rs  debug.rs  effect_machine.rs  heap_bridge.rs  host_fns.rs  jit_machine.rs  lib.rs  nursery.rs  pipeline.rs  signal_safety.rs  stack_map.rs  yield_type.rs
tidepool-codegen/tests/: effect_machine.rs  emit_case.rs  emit_expr.rs  emit_join.rs  emit_letrec_con.rs  gc_audit.rs  gc_frame_walker.rs  haskell_suite_differential.rs  proptest_differential.rs  scaffold.rs  signal_safety.rs  stack_safety.rs
tidepool-effect/: Cargo.toml
tidepool-effect/src/: dispatch.rs  error.rs  lib.rs  machine.rs
tidepool-eval/: Cargo.toml
tidepool-eval/src/: env.rs  error.rs  eval.rs  lib.rs  value.rs
tidepool-eval/tests/: haskell_suite.rs  text_suite.rs
tidepool-heap/: Cargo.toml
tidepool-heap/src/: arena.rs  lib.rs
tidepool-heap/src/gc/: compact.rs  raw.rs  trace.rs
tidepool-heap/tests/: gc_unit.rs  proptest_heap.rs
tidepool-macro/: Cargo.toml
tidepool-macro/src/: expand.rs  lib.rs
tidepool-macro/tests/: basic.rs  hs_eval.rs
tidepool-mcp/: Cargo.toml
tidepool-mcp/src/: lib.rs
tidepool-optimize/: Cargo.toml
tidepool-optimize/src/: beta.rs  case_reduce.rs  dce.rs  inline.rs  lib.rs  occ.rs  partial.rs  pipeline.rs
tidepool-optimize/tests/: proptest_correctness.rs  proptest_optimize.rs  proptest_optimizer.rs  proptest_partial_eval.rs
tidepool-repr/: Cargo.toml
tidepool-repr/src/: datacon_table.rs  lib.rs  pretty.rs  subst.rs  types.rs
tidepool-repr/tests/: inspect_cbor.rs  proptest_cbor.rs
tidepool-runtime/: Cargo.toml
tidepool-runtime/src/: cache.rs  lib.rs  render.rs
tidepool-runtime/tests/: cache_tests.rs  concurrent_eval.rs  effect_fold_regression.rs  effect_prompt_sigill.rs  integration.rs  multi_module_datacon.rs  nubby_stack_overflow.rs  proptest_gc_pressure.rs  proptest_jit_vs_eval.rs  repro_split.rs  show_double_10effect.rs  show_double_lens_sigill.rs  sort_crash.rs  text_filter_gc.rs  text_module_coverage.rs  user_library.rs  value_case_match.rs
tidepool-testing/: Cargo.toml
tidepool-testing/benches/: eval.rs  heap.rs  optimize.rs
tidepool-testing/src/: compare.rs  lib.rs  oracle.rs  proptest.rs
tidepool/src/: lib.rs  main.rs
viz/: curate-graph.py  extract-graph.sh  graph-data.json  index.template.html
(+140 files in other folders)
