[workspace]
members = [
    "tidepool-repr",
    "tidepool-eval",
    "tidepool-testing",
    "tidepool-heap",
    "tidepool-optimize",
    "tidepool-bridge",
    "tidepool-bridge-derive",
    "tidepool-macro",
    "tidepool-effect",
    "tidepool-codegen",
    "tidepool-runtime",
    "tidepool-mcp",
    "tidepool",
    "examples/guess",
    "examples/guess-interpreted",
    "examples/tide",
    "examples/mcp-server",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tidepool-heavy-industries/tidepool"
authors = ["Inanna Malick <inanna@recursion.wtf>"]
rust-version = "1.83"
