[package]
name = "tidepool-bridge-derive"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tidepool-heavy-industries/tidepool"
description = "Derive macros for the Tidepool bridge"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
tidepool-bridge = { version = "0.0.1", path = "../tidepool-bridge" }
tidepool-repr = { version = "0.0.1", path = "../tidepool-repr" }
tidepool-eval = { version = "0.0.1", path = "../tidepool-eval" }
tidepool-testing = { version = "0.0.1", path = "../tidepool-testing" }