[package]
name = "tidepool-eval"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tidepool-heavy-industries/tidepool"
description = "Tree-walking interpreter for Tidepool Core"

[dependencies]
tidepool-repr = { version = "0.0.1", path = "../tidepool-repr" }
im = "15"