[package]
name = "tidepool-macro"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tidepool-heavy-industries/tidepool"
description = "Procedural macros for the Tidepool language"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
tidepool-repr = { version = "0.0.1", path = "../tidepool-repr" }
tidepool-eval = { version = "0.0.1", path = "../tidepool-eval" }
tidepool-bridge = { version = "0.0.1", path = "../tidepool-bridge" }