[package]
name = "tidepool-optimize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Optimization passes for Tidepool Core"
readme = "../README.md"

[dependencies]
tidepool-repr = { version = "0.1.0", path = "../tidepool-repr" }
tidepool-eval = { version = "0.1.0", path = "../tidepool-eval" }

[dev-dependencies]
tidepool-testing = { version = "0.1.0", path = "../tidepool-testing" }
proptest = "1"
serial_test = "3.4.0"
