[package]
name = "tidepool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Compile Haskell effect stacks to Cranelift JIT, drive from Rust"
readme = "../README.md"
keywords = ["haskell", "jit", "cranelift", "effects", "compiler"]
categories = ["compilers", "wasm"]

[dependencies]
tidepool-repr = { version = "0.0.1", path = "../tidepool-repr" }
tidepool-eval = { version = "0.0.1", path = "../tidepool-eval" }
tidepool-heap = { version = "0.0.1", path = "../tidepool-heap" }
tidepool-optimize = { version = "0.0.1", path = "../tidepool-optimize" }
tidepool-bridge = { version = "0.0.1", path = "../tidepool-bridge" }
tidepool-bridge-derive = { version = "0.0.1", path = "../tidepool-bridge-derive" }
tidepool-effect = { version = "0.0.1", path = "../tidepool-effect" }
tidepool-codegen = { version = "0.0.1", path = "../tidepool-codegen" }
tidepool-macro = { version = "0.0.1", path = "../tidepool-macro" }
tidepool-runtime = { version = "0.0.1", path = "../tidepool-runtime" }
tidepool-mcp = { version = "0.0.1", path = "../tidepool-mcp" }
